# LMN-3-DAW

./: CMakeLists.txt  CMakeLists.txt.save
.github/workflows/: release.yaml
Plugins/: CMakeCache.txt  CMakeLists.txt
Plugins/DexedSynthPlugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/ExampleSynthPlugin/: CMakeLists.txt
Plugins/HeraPlugin/: CMakeLists.txt
Plugins/LMN-3_artefacts/JuceLibraryCode/: Info.txt
Plugins/LMN-3_artefacts/JuceLibraryCode/LMN-3/: Info.plist
Plugins/Plugins/Hera/Hera_artefacts/JuceLibraryCode/: Info.txt
Plugins/Plugins/dexed/Resources/juce_binarydata_DexedResources/JuceLibraryCode/: input_file_list
Plugins/Plugins/dexed/Source/Dexed_artefacts/JuceLibraryCode/: Info.txt
Plugins/Tests/: Tests[1]_include.cmake
Plugins/dexed/Source/Dexed_artefacts/JuceLibraryCode/: Info.txt
Plugins/dexed/libs/clap-juce-extensions/clapjuceext_clap/: clap.pc
Plugins/dexedPlugin/: CMakeLists.txt
Plugins/juce_binarydata_FontData/JuceLibraryCode/: input_file_list
Plugins/juce_binarydata_ImageData/JuceLibraryCode/: input_file_list
Plugins/tracktion_engine/modules/JUCE/: JUCEExportConfig.cmake
Plugins/tracktion_engine/modules/JUCE/tools/modules/: cmake_install.cmake
Plugins/tracktion_engine/modules/juce/: JUCEConfigVersion.cmake  JUCEExportConfig.cmake
Plugins/tracktion_engine/modules/juce/JUCE/tools/: JUCEToolsExport.cmake
Plugins/tracktion_engine/modules/juce/JUCE/tools/modules/: Makefile
Plugins/tracktion_engine/modules/juce/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
Plugins/tracktion_engine/modules/juce/tools/modules/: Makefile  cmake_install.cmake
Source/: Main.cpp
Source/Modules/app_services/MidiCommandManager/: MidiCommandManager.cpp  ble_setup.cpp
Source/Modules/app_view_models/Edit/Plugins/PluginTree/: PluginTreeGroup.cpp
Source/Modules/internal_plugins/: internal_plugins.h
Source/Modules/internal_plugins/DexedSynthPlugin/: DexedSynthPlugin.cpp  DexedSynthPlugin.h
Source/Views/LookAndFeel/: AppLookAndFeel.h
build.old/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build.old/LMN-3_artefacts/JuceLibraryCode/: Info.txt
build.old/LMN-3_artefacts/JuceLibraryCode/Release/: Defs.txt
build.old/Plugins/: Makefile  cmake_install.cmake
build.old/Plugins/DexedSynthPlugin/: Makefile  cmake_install.cmake
build.old/Plugins/DexedSynthPlugin/DexedSynthPlugin_artefacts/JuceLibraryCode/: Info.txt
build.old/Plugins/DexedSynthPlugin/DexedSynthPlugin_artefacts/JuceLibraryCode/Release/: Defs.txt
build.old/Plugins/Hera/: Makefile  cmake_install.cmake
build.old/Plugins/Hera/Hera_artefacts/JuceLibraryCode/: Info.txt
build.old/Plugins/Hera/Hera_artefacts/JuceLibraryCode/Release/: Defs.txt
build.old/Plugins/Hera/juce_binarydata_HeraData/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  input_file_list
build.old/Plugins/OB-XdSynthPlugin/OB-XdSynthPlugin_artefacts/Release/VST3/OB-Xd.vst3/Contents/Resources/: moduleinfo.json
build.old/Tests/: CTestTestfile.cmake  Makefile  Tests[1]_include.cmake  Tests[1]_tests.cmake  cmake_install.cmake
build.old/Tests/Tests_artefacts/JuceLibraryCode/Release/: Defs.txt
build.old/Tests/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.old/Tests/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.old/Tests/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.old/juce_binarydata_FontData/JuceLibraryCode/: BinaryData1.cpp  BinaryData2.cpp  BinaryData3.cpp  FontData.h  input_file_list
build.old/juce_binarydata_ImageData/JuceLibraryCode/: BinaryData1.cpp  BinaryData2.cpp  ImageData.h  input_file_list
build.old/tracktion_engine/modules/juce/: Makefile  cmake_install.cmake
build.old/tracktion_engine/modules/juce/modules/: Makefile  cmake_install.cmake
build.old/tracktion_engine/modules/juce/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build.old/tracktion_engine/modules/juce/tools/modules/: Makefile  cmake_install.cmake
build.old/yaml-cpp/: Makefile  cmake_install.cmake
build.old/yaml-cpp/util/: Makefile  cmake_install.cmake  parse  read  sandbox
libs/JUCE/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  Makefile  cmake_install.cmake
